# Glaze

./: .gitignore  LICENSE  README.md  build.py  main.py  pyproject.toml  users.csv
.github/workflows/: ci.yml
src/glaze/: __init__.py  __main__.py  color_backend.py  material_colors.py  matugen.py  theme.py  wayland.py
src/glaze/components/: __init__.py  data_table.py  form.py  settings.py
src/glaze/components/aw_shell/: __init__.py  aw_settings.py  settings_bridge.py
src/glaze/widgets/: __init__.py  combo_box.py  donate_button.py  frameless_window.py  header.py  tabs.py  title_bar.py
tests/: test_platform_detection.py
